--- a/index.html
+++ b/index.html
@@ -1093,28 +1093,28 @@ if (dlid) {
 
 </script>
 <script async="" src="./Files &amp; Player_files/js(1)"></script>
-<script id="script_analytics">// $(function () {
-// 	$.ajax({
-// 		type: "POST",
-// 		url: "https://app.flycricket.com/api/website_view/ef7e8d9e-f141-4fed-aa47-dc938eaf7e82",
-// 		dataType: 'json',
-// 		contentType: 'application/json',
-// 		data: JSON.stringify({ referrer: document.referrer }),
-// 		success: function (resp) {
-// 			console.log(resp);
-// 		},
-// 		error: function (xhr, ajaxOptions, thrownError) {
-// 			console.error(thrownError);
-// 		}
-// 	});
-// });
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
-window.dataLayer = window.dataLayer || [];
-function gtag() { dataLayer.push(arguments); }
-gtag('js', new Date());
-gtag('config', 'UA-84588334-7');
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyD2o0ohWhH8Ys6-jafAuFaVBGaMsLCdtIA",
+    authDomain: "music-player-b9109.firebaseapp.com",
+    projectId: "music-player-b9109",
+    storageBucket: "music-player-b9109.firebasestorage.app",
+    messagingSenderId: "267085276002",
+    appId: "1:267085276002:web:ea11691c12e481cacf423b",
+    measurementId: "G-JLW10PJKDN"
+  };
 
-
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
 </script>
 
 
