--- a/privacy.html
+++ b/privacy.html
@@ -155,6 +155,30 @@ footer a {
 
             </div>
         </div>
+            <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyD2o0ohWhH8Ys6-jafAuFaVBGaMsLCdtIA",
+    authDomain: "music-player-b9109.firebaseapp.com",
+    projectId: "music-player-b9109",
+    storageBucket: "music-player-b9109.firebasestorage.app",
+    messagingSenderId: "267085276002",
+    appId: "1:267085276002:web:ea11691c12e481cacf423b",
+    measurementId: "G-JLW10PJKDN"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
+    </body>
         <footer>
 </footer>
 </html>
