--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@ a.contact:hover {
 <h1 id="text.title">Files manager and music/video player</h1>
 <h2 id="text.subtitle">Easily manage your offline files, add music to listen immediately</h2>
 <div style="margin-top:2em;">
-<a class="store-button ios" href="mailto:xftnffsrnxm@hotmail.com" target="_blank">
+<a class="store-button ios" href="mailto:xftnffsrnxm@hotmail.com?subject=Feedback to Offline&amp;body=Your message here" target="_blank">
 <img src="./Files &amp; Player_files/ios.png">
 </a>
 </div>
@@ -951,7 +951,7 @@ a.contact:hover {
 </div>
 <div class="col-xs-12 col-md-6 footer-store-button-container">
 <div class="footer-store-button">
-<a class="store-button ios" href="mailto:xftnffsrnxm@hotmail.com" target="_blank">
+<a class="store-button ios" href="mailto:xftnffsrnxm@hotmail.com?subject=Feedback to Offline&amp;body=Your message here" target="_blank">
 <img src="./Files &amp; Player_files/ios.png">
 </a>
 </div>
